# finch

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  RESOURCES.md
.github/workflows/: build-images.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b8c63300361_add_credit_limit_to_accounts.py  53bff0f9b87d_create_initial_tables.py  a1f7c3e2b9d4_add_enum_check_constraints.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: accounts.py  budgets.py  categories.py  dashboard.py  export.py  health.py  recurring_items.py  transactions.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  account.py  budget.py  category.py  enums.py  recurring_item.py  transaction.py
backend/app/schemas/: account.py  budget.py  category.py  dashboard.py  recurring_item.py  transaction.py
backend/app/services/: account_service.py  budget_service.py  category_service.py  dashboard_service.py  export_service.py  recurring_service.py  transaction_service.py
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  tsconfig.app.json
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/api/: accounts.ts  budgets.ts  categories.ts  client.ts  dashboard.ts  export.ts  recurring.ts  transactions.ts
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  (+8 more)
k8s/: 00-namespace.yaml  01-secrets.yaml  02-postgres.yaml  03-backend.yaml  04-frontend.yaml  05-migrate-job.yaml
(+23 files in other folders)
